--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,3 +98,4 @@ flutter:
     - assets/profile-picture.png
     - assets/reset-password-icon.png
     - assets/user-picture.png
+    - assets/check-box.png
