--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation platform('com.google.firebase:firebase-bom:31.2.0')
     implementation'com.google.firebase:firebase-analytics:21.2.0'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
