--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   firebase_auth:
   provider:
   google_sign_in:
+  email_validator: ^2.1.16
+  basic_utils: ^5.5.1
+
 #Firebase Database
   cloud_firestore: ^4.3.1
   firebase_core: ^2.4.1
@@ -43,6 +46,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
