Guarda nome do usuário e email no firestore

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth:
+  firebase_auth: ^4.2.9
   provider:
   google_sign_in:
   email_validator: ^2.1.16
@@ -39,7 +39,8 @@ dependencies:
 
 #Firebase Database
   cloud_firestore: ^4.4.3
-  firebase_core: ^2.4.1
+  firebase_core: ^2.7.0
+  firebase_core_web: ^2.2.1
   firebase_database: ^10.0.9
 
 
