--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_picker: ^0.8.7
 
 
 dev_dependencies:
@@ -112,3 +113,4 @@ flutter:
     - assets/analises/densidade-x-area.png
     - assets/analises/distribuicao-geografica.png
     - assets/analises/segmento-x-claim.png
+    - assets/profile.jpeg
