--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   google_sign_in:
   email_validator: ^2.1.16
   basic_utils: ^5.5.1
+  flutter_map: ^0.13.1
+  latlong2: ^0.8.1
 
 #Firebase Database
   firebase_auth: ^4.2.9
@@ -43,13 +45,11 @@ dependencies:
   firebase_core_web: ^2.2.1
   firebase_database: ^10.0.9
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.7
   webview_flutter: ^4.0.6
-
 
 dev_dependencies:
   flutter_test:
