--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.7
   webview_flutter: ^4.0.6
+  flutter_email_sender: ^5.2.0
 
 dev_dependencies:
   flutter_test:
