--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   google_sign_in:
   email_validator: ^2.1.16
   basic_utils: ^5.5.1
-  flutter_map: ^0.13.1
+  flutter_map: ^3.1.0
   latlong2: ^0.8.1
 
 #Firebase Database
@@ -50,6 +50,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.7
   webview_flutter: ^4.0.6
+  flutter_email_sender: ^5.2.0
 
 dev_dependencies:
   flutter_test:
