--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   basic_utils: ^5.5.1
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
+  file_picker: ^4.1.4
+  url_launcher: ^6.0.9
+
+
+
 
 #Firebase Database
   firebase_auth: ^4.2.9
@@ -44,6 +49,7 @@ dependencies:
   firebase_core: ^2.7.0
   firebase_core_web: ^2.2.1
   firebase_database: ^10.0.9
+  firebase_storage: ^11.0.16
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
