--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   flutter_email_sender: ^5.2.0
   firebase_storage: ^11.0.16
   mailer: ^6.0.0
+  typed_data: ^1.3.1
+  convert: ^3.1.1
 
 dev_dependencies:
   flutter_test:
